@@ -3,6 +3,8 @@ package hbnu.project.zhiyanbackend.ai.aiassistant.service.impl;
 import hbnu.project.zhiyanbackend.ai.aiassistant.config.DifyProperties;
 import hbnu.project.zhiyanbackend.ai.aiassistant.model.response.DifyFileUploadResponse;
 import hbnu.project.zhiyanbackend.ai.aiassistant.service.DifyFileService;
+import hbnu.project.zhiyanbackend.basic.exception.DifyException;
+import hbnu.project.zhiyanbackend.basic.utils.ValidationUtils;
 import hbnu.project.zhiyanbackend.knowledge.model.dto.FileContextDTO;
 import hbnu.project.zhiyanbackend.knowledge.service.AchievementFileService;
 import lombok.RequiredArgsConstructor;
@@ -19,12 +21,20 @@ import org.springframework.web.client.RestTemplate;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.ByteArrayInputStream;
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
 
+/**
+ * dify文件的服务实现
+ *
+ * @author Tokito
+ * @rewrite ErgouTree
+ */
 @Slf4j
 @Service
 @RequiredArgsConstructor
@@ -34,25 +44,29 @@ public class DifyFileServiceImpl implements DifyFileService {
     private final RestTemplate restTemplate;
     private final AchievementFileService achievementFileService;
 
+    /**
+     * 上传单个文件到dify
+     *
+     * @param file 要上传的文件，类型为MultipartFile
+     * @param userId 用户ID，用于标识文件所属用户
+     * @return DifyFileUploadResponse 上传响应
+     */
     @Override
     public DifyFileUploadResponse uploadFile(MultipartFile file, Long userId) {
+        // 1. 入参校验
+        ValidationUtils.requireNonEmptyFile(file);
+        ValidationUtils.requireId(userId, "userId");
+
         try {
-            MultiValueMap<String, Object> body = new LinkedMultiValueMap<>();
-            body.add("file", new ByteArrayResource(file.getBytes()) {
-                @Override
-                public String getFilename() {
-                    return file.getOriginalFilename();
-                }
-            });
-            body.add("user", String.valueOf(userId));
-
-            HttpHeaders headers = new HttpHeaders();
-            headers.setContentType(MediaType.MULTIPART_FORM_DATA);
-            headers.setBearerAuth(difyProperties.getApiKey());
-
+            // 2. 构建请求体
+            MultiValueMap<String, Object> body = buildUploadRequestBody(file, userId);
+            // 3. 构建请求头
+            HttpHeaders headers = buildUploadRequestHeaders();
+            // 4. 构建请求实体
             HttpEntity<MultiValueMap<String, Object>> requestEntity = new HttpEntity<>(body, headers);
-            String uploadUrl = difyProperties.getApiUrl() + "/files/upload";
-
+            // 5. 拼接上传URL（防止配置的URL末尾有/导致拼接错误）
+            String uploadUrl = buildUploadUrl();
+            // 6. 发送请求并处理响应
             ResponseEntity<DifyFileUploadResponse> response = restTemplate.postForEntity(
                     uploadUrl,
                     requestEntity,
@@ -69,21 +83,41 @@ public class DifyFileServiceImpl implements DifyFileService {
         }
     }
 
+    /**
+     * 批量上传文件到dify
+     * @param files 要上传的文件列表，类型为List<MultipartFile>
+     * @param userId 用户ID，用于标识文件所属用户
+     * @return DifyFileUploadResponse
+     */
     @Override
     public List<DifyFileUploadResponse> uploadFiles(List<MultipartFile> files, Long userId) {
+        ValidationUtils.requireId(userId, "userId");
+        ValidationUtils.requireNonEmptyFileList(files, "files");
+
         List<DifyFileUploadResponse> responses = new ArrayList<>();
         for (MultipartFile file : files) {
             try {
                 responses.add(uploadFile(file, userId));
-            } catch (RuntimeException ex) {
+            } catch (DifyException ex) {
                 log.error("Dify 批量上传单个文件失败, fileName={}", file.getOriginalFilename(), ex);
             }
         }
         return responses;
     }
 
+    /**
+     * 上传知识库的文件到dify
+     * 可批量
+     *
+     * @param fileIds 文件ID列表，用于标识要上传的知识文件
+     * @param userId 用户ID，用于标识文件所属用户
+     * @return DifyFileUploadResponse的列表
+     */
     @Override
     public List<DifyFileUploadResponse> uploadKnowledgeFiles(List<Long> fileIds, Long userId) {
+        ValidationUtils.requireId(userId, "userId");
+        ValidationUtils.requireNonEmpty(fileIds, "fileIds");
+
         List<DifyFileUploadResponse> responses = new ArrayList<>();
 
         if (fileIds == null || fileIds.isEmpty()) {
@@ -110,7 +144,7 @@ public class DifyFileServiceImpl implements DifyFileService {
                 String fileName = context.getFileName();
                 
                 log.info("[Dify 知识库上传] 准备下载文件: fileId={}, fileName={}, fileUrl前50字符={}", 
-                        fileId, fileName, fileUrl != null ? fileUrl.substring(0, Math.min(50, fileUrl.length())) : "null");
+                        fileId, fileName, fileUrl.substring(0, Math.min(50, fileUrl.length())));
 
                 MultipartFile multipartFile = downloadAsMultipart(fileUrl, fileName);
                 log.info("[Dify 知识库上传] 文件下载成功: fileId={}, fileName={}, size={}字节", 
@@ -120,8 +154,10 @@ public class DifyFileServiceImpl implements DifyFileService {
                 log.info("[Dify 知识库上传] 文件上传到Dify成功: fileId={}, difyFileId={}", 
                         fileId, response != null ? response.getFileId() : "null");
                 responses.add(response);
-            } catch (Exception e) {
+            } catch (DifyException e) {
                 log.error("[Dify 知识库上传] 处理单个文件失败, fileId={}", fileId, e);
+            } catch (IOException e) {
+                log.error("[Dify 知识库上传] 处理单个文件失败, 其他错误, fileId={}", fileId);
             }
         }
 
@@ -132,7 +168,9 @@ public class DifyFileServiceImpl implements DifyFileService {
       * 将远程文件下载为 MultipartFile，方便复用现有的 Dify 上传逻辑
       */
      private MultipartFile downloadAsMultipart(String fileUrl, String fileName) throws IOException {
-         URL url = new URL(fileUrl);
+         URI uri = URI.create(fileUrl);
+         URL url = uri.toURL();
+
          try (InputStream inputStream = url.openStream()) {
              byte[] bytes = inputStream.readAllBytes();
              String safeFileName = (fileName != null && !fileName.isBlank()) ? fileName : "file";
@@ -174,10 +212,52 @@ public class DifyFileServiceImpl implements DifyFileService {
                  }
 
                  @Override
-                 public void transferTo(java.io.File dest) throws IOException {
+                 public void transferTo(File dest) throws IOException {
                      java.nio.file.Files.write(dest.toPath(), bytes);
                  }
              };
          }
      }
+
+    /**
+     * 构建文件上传的请求体
+     */
+    private MultiValueMap<String, Object> buildUploadRequestBody(MultipartFile file, Long userId) throws IOException {
+        MultiValueMap<String, Object> body = new LinkedMultiValueMap<>();
+        // 使用ByteArrayResource包装文件字节，指定文件名
+        body.add("file", new ByteArrayResource(file.getBytes()) {
+            @Override
+            public String getFilename() {
+                return file.getOriginalFilename();
+            }
+        });
+        body.add("user", String.valueOf(userId));
+        return body;
+    }
+
+    /**
+     * 构建文件上传的请求头
+     */
+    private HttpHeaders buildUploadRequestHeaders() {
+        HttpHeaders headers = new HttpHeaders();
+        headers.setContentType(MediaType.MULTIPART_FORM_DATA);
+        // 校验API Key是否配置
+        if (difyProperties.getApiKey() == null || difyProperties.getApiKey().isBlank()) {
+            throw new DifyException("Dify配置异常：API Key未配置");
+        }
+        headers.setBearerAuth(difyProperties.getApiKey());
+        return headers;
+    }
+
+    /**
+     * 拼接上传URL，处理URL末尾的/问题
+     */
+    private String buildUploadUrl() {
+        String apiUrl = difyProperties.getApiUrl();
+        if (apiUrl == null || apiUrl.isBlank()) {
+            throw new DifyException("Dify配置异常：API URL未配置");
+        }
+        // 统一URL拼接规则：如果apiUrl末尾有/，则直接拼接，否则加/后拼接
+        return apiUrl.endsWith("/") ? apiUrl + "files/upload" : apiUrl + "/files/upload";
+    }
 }
